# jitipy

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  example.py  pastable.txt  pyproject.toml  setup.py  test.py  test_api.py  test_interp.py  test_jitify_hello.py  test_jitify_notemplate.py  test_jitify_program.py  test_jitify_pyapi.py  test_jitify_result.py  test_jitify_template.py  vgerr.txt
jitipy/: __init__.py  _clanginterpreter.cpp  _lib.cpp  clanginterpreter.py
jitipy/tests/: conftest.py  test_interpreter.py  test_jitipy_api.py
